concord_macros/tests/trybuild/fail/codegen/websocket_retry_endpoint.stderr
error: `WS` endpoints do not support retry policies
  --> tests/trybuild/fail/codegen/websocket_retry_endpoint.rs:27:5
   |
27 |     WS Connect
   |     ^^
